force-app/main/default/objects/Store__c/Store__c.object-meta.xml
<CustomObject>
    <label>Store</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Store Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>