force-app/main/default/objects/Store__c/fields/Feed_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Feed_Last_Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feed Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stores</relationshipName>
    <type>Lookup</type>
</CustomField>