force-app/main/default/objects/Store__c/fields/HasValidZipCode__c.field-meta.xml
<CustomField>
    <fullName>HasValidZipCode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasValidZipCode</label>
    <type>Checkbox</type>
</CustomField>