force-app/main/default/objects/Store__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issue</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Stores</relationshipLabel>
    <relationshipName>Stores</relationshipName>
    <type>Lookup</type>
</CustomField>