force-app/main/default/objects/Store__c/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <description>Feed Outbound - Date format.</description>
    <formula>IF ( DATEVALUE(FeedLastModifiedDate__c) &gt;=
DATE ( YEAR (DATEVALUE(FeedLastModifiedDate__c)),3,1)
+
(
14-
CASE( MOD(DATE ( YEAR (DATEVALUE(FeedLastModifiedDate__c)),3,1) - DATE (1900,1,4),4) ,
0,4,MOD(DATE ( YEAR (DATEVALUE(FeedLastModifiedDate__c)),3,1) - DATE (1900,1,4),4))
)
&amp;&amp;
DATEVALUE(FeedLastModifiedDate__c) &lt;
DATE ( YEAR (DATEVALUE(FeedLastModifiedDate__c)),11,1)
+
(
4-
CASE( MOD(DATE ( YEAR (DATEVALUE(FeedLastModifiedDate__c)),11,1) - DATE (1900,1,4),4) ,
0,4,MOD(DATE ( YEAR (DATEVALUE(FeedLastModifiedDate__c)),11,1) - DATE (1900,1,4),4))
),
MID( TEXT(FeedLastModifiedDate__c- 4/24) , 6, 2)+&quot;/&quot;+MID( TEXT(FeedLastModifiedDate__c- 4/24) , 9, 2)+&quot;/&quot;+MID( TEXT(FeedLastModifiedDate__c- 4/24) , 0, 4) + &quot; &quot;+MID(TEXT(FeedLastModifiedDate__c- 4/24), 11, 9)
,
MID( TEXT(FeedLastModifiedDate__c- 5/24) , 6, 2)+&quot;/&quot;+MID( TEXT(FeedLastModifiedDate__c- 5/24) , 9, 2)+&quot;/&quot;+MID( TEXT(FeedLastModifiedDate__c- 5/24) , 0, 4) + &quot; &quot;+MID(TEXT(FeedLastModifiedDate__c- 5/24), 11, 9)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastModifiedDate</label>
    <type>Text</type>
</CustomField>