force-app/main/default/objects/Store__c/fields/Store_Address2__c.field-meta.xml
<CustomField>
    <fullName>Store_Address2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Store Address2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>