force-app/main/default/objects/Store__c/fields/Store_City__c.field-meta.xml
<CustomField>
    <fullName>Store_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Store City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>