force-app/main/default/objects/Store__c/fields/Store_Comment__c.field-meta.xml
<CustomField>
    <fullName>Store_Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Store Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>