force-app/main/default/objects/Store__c/fields/Store_State__c.field-meta.xml
<CustomField>
    <fullName>Store_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Store State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>