force-app/main/default/objects/Store__c/fields/Store_Type__c.field-meta.xml
<CustomField>
    <fullName>Store_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Store Type</label>
    <referenceTo>Store_Type__c</referenceTo>
    <relationshipLabel>Stores</relationshipLabel>
    <relationshipName>Stores</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>