force-app/main/default/objects/Store__c/fields/Store_Type_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Store_Type_Reporting__c</fullName>
    <formula>Store_Type__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Type</label>
    <type>Text</type>
</CustomField>