force-app/main/default/objects/Store__c/fields/Store_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>Store_Type_Text__c</fullName>
    <formula>Store_Type__r.Name</formula>
    <label>Store Type</label>
    <type>Text</type>
</CustomField>