force-app/main/default/objects/Store__c/fields/Store_Zip4__c.field-meta.xml
<CustomField>
    <fullName>Store_Zip4__c</fullName>
    <description>Feed Outbound - HardCode value &apos;&apos;</description>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Zip4</label>
    <type>Text</type>
</CustomField>