force-app/main/default/objects/Store__c/fields/Store_Zip__c.field-meta.xml
<CustomField>
    <fullName>Store_Zip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Store Zip</label>
    <length>7</length>
    <type>Text</type>
</CustomField>