force-app/main/default/objects/Store__c/fields/StoreCommentFeed__c.field-meta.xml
<CustomField>
    <fullName>StoreCommentFeed__c</fullName>
    <description>Outbound Feed Only.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Store Comment Feed</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>