force-app/main/default/objects/Store__c/fields/TransacationID__c.field-meta.xml
<CustomField>
    <fullName>TransacationID__c</fullName>
    <description>Feed Outbound - Transacation ID</description>
    <formula>Issue__r.Transacation_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transacation ID</label>
    <type>Text</type>
</CustomField>