force-app/main/default/objects/Store__c/validationRules/Store_Address_2_Commas.validationRule-meta.xml
<ValidationRule>
    <fullName>Store_Address_2_Commas</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(     Store_Address2__c   , &quot;,&quot;)</errorConditionFormula>
    <errorDisplayField>Store_Address2__c</errorDisplayField>
    <errorMessage>Field cannot contain commas</errorMessage>
</ValidationRule>