force-app/main/default/objects/Store__c/validationRules/Store_City_Commas.validationRule-meta.xml
<ValidationRule>
    <fullName>Store_City_Commas</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(    Store_City__c    , &quot;,&quot;)</errorConditionFormula>
    <errorDisplayField>Store_City__c</errorDisplayField>
    <errorMessage>Field cannot contain commas</errorMessage>
</ValidationRule>