force-app/main/default/objects/Store__c/validationRules/Store_Comments_Commas.validationRule-meta.xml
<ValidationRule>
    <fullName>Store_Comments_Commas</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(     Store_Comment__c     , &quot;,&quot;)</errorConditionFormula>
    <errorDisplayField>Store_Comment__c</errorDisplayField>
    <errorMessage>Field cannot contain commas</errorMessage>
</ValidationRule>