force-app/main/default/objects/Store__c/validationRules/Store_Name_Commas.validationRule-meta.xml
<ValidationRule>
    <fullName>Store_Name_Commas</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(    Store_Name__c   , &quot;,&quot;)</errorConditionFormula>
    <errorDisplayField>Store_Name__c</errorDisplayField>
    <errorMessage>Field Cannot contain commas</errorMessage>
</ValidationRule>