force-app/main/default/objects/Store__c/validationRules/Store_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Store_Name_Required</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Issue__r.Issue_Type__c  = &apos;Complaints&apos;  &amp;&amp; ISBLANK(  Store_Name__c ),  true , false)</errorConditionFormula>
    <errorMessage>Please enter a Store Name</errorMessage>
</ValidationRule>