force-app/main/default/objects/Store__c/validationRules/Store_State_Commas.validationRule-meta.xml
<ValidationRule>
    <fullName>Store_State_Commas</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(    Store_State__c    , &quot;,&quot;)</errorConditionFormula>
    <errorDisplayField>Store_State__c</errorDisplayField>
    <errorMessage>Field cannot contain commas</errorMessage>
</ValidationRule>