force-app/main/default/objects/Store__c/validationRules/Store_Zip_Commas.validationRule-meta.xml
<ValidationRule>
    <fullName>Store_Zip_Commas</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(    Store_Zip__c    , &quot;,&quot;)</errorConditionFormula>
    <errorDisplayField>Store_Zip__c</errorDisplayField>
    <errorMessage>Field cannot contain commas</errorMessage>
</ValidationRule>