force-app/main/default/objects/Store__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Store_City__c</columns>
    <columns>NAME</columns>
    <columns>Store_Address1__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>